--- a/src/app/_components/header/header.component.html
+++ b/src/app/_components/header/header.component.html
@@ -9,10 +9,10 @@
         <div class="top-nav">
             <ul>
                 <li routerLinkActive="active"><a [routerLink]="['/home']">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="whatwe.html">What we do</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li routerLinkActive="active"><a [routerLink]="['/about']">About</a></li>
+                <li routerLinkActive="active"><a [routerLink]="['/what-we-do']">What we do</a></li>
+<!--                <li><a href="services.html">Services</a></li>-->
+                <li routerLinkActive="active"><a [routerLink]="['/contact']">Contact</a></li>
                 <li routerLinkActive="active"><a [routerLink]="['/login']">Login</a></li>
                 <div class="clear"> </div>
             </ul>
