--- a/src/app/_components/ticketsearch/ticketsearch.component.html
+++ b/src/app/_components/ticketsearch/ticketsearch.component.html
@@ -1,4 +1,5 @@
 <app-dashboard-header></app-dashboard-header>
+<div class="booktaxi-container">
 <h1>TICKET SEARCH</h1>
 <div class="containerw3layouts-agileits">
     <div class="w3layoutscontactagileits">
@@ -17,4 +18,5 @@
             </div>
         </form>
     </div>
+</div>
 </div>
