login service added.

--- a/src/app/_components/login/login.component.html
+++ b/src/app/_components/login/login.component.html
@@ -8,7 +8,7 @@
                         <label>Email</label><span class="colon">:</span>
                     </div>
                     <div class="agileemailinfo-input wthreeinput">
-                        <input class="top" type="text" [(ngModel)]="bLoginDetails.email" name="email" formControlName="email" placeholder="Email" required="">
+                        <input class="top" type="text" [(ngModel)]="bLoginDetails.emailId" name="email" formControlName="email" placeholder="Email" required="">
                     </div>
                     <div *ngIf="loginForm.controls['email'].hasError('required') && loginForm.controls['email'].touched" [ngClass]="{'error':!loginForm.controls['email'].valid && loginForm.controls['email'].touched}">you must include email</div>
                     <div class="clear"></div>
