--- a/src/app/_components/dashboard-header/dashboard-header.component.html
+++ b/src/app/_components/dashboard-header/dashboard-header.component.html
@@ -12,6 +12,7 @@
                 <li routerLinkActive="active"><a routerLink="/ticketsearch" >Ticket Search</a></li>
                 <li routerLinkActive="active"><a routerLink="/destination">Destinations</a></li>
                 <li routerLinkActive="active"><a routerLink="/driverinfo">Drivers Info</a></li>
+                <li routerLinkActive="active"><a routerLink="/staff">Staff</a></li>
                 <li routerLinkActive="active"><a routerLink="/reports">Reports</a></li>
                 <li routerLinkActive="active"><a routerLink="/home">Sign Out</a></li>
                 <div class="clear"> </div>
