added design for select and service call modified

--- a/src/app/_components/destination/destination.component.html
+++ b/src/app/_components/destination/destination.component.html
@@ -1,77 +1,79 @@
 <app-dashboard-header></app-dashboard-header>
 <div class="booktaxi-container">
 
-<div class="aitssubmitw3ls">
-    <input type="submit" name="add"  (click)="isAddDestination=true" value="ADD DESTINATION">
-                    <!--<input type="submit" name="add" (click)="isAddDestination=true" [disabled]="!destinationForm.valid" value="ADD">-->
-<!--</div>
-<div class="aitssubmitw3ls">-->
-    <input type="submit" name="delete" (click)="isAddDestination=false" value="DELETE DESTINATION">
-                        <!--<input type="submit" name="delete" (click)="isAddDestination=false" [disabled]="!destinationForm.valid" value="DELETE">-->
-</div>
-    
-    <div class="containerw3layouts-agileits" *ngIf="isAddDestination">
-    <h1>ADD DESTINATION</h1>
-        <div class="w3layoutscontactagileits">
-            <form [formGroup]="destinationForm" >
-                <div class="agileemailinfo agileinfow3ls">
-                    <div class="agileemailinfo-lable wthreelable">
-                        <label>From</label><span class="colon">:</span>
-                    </div>
-                    <div class="agileemailinfo-input wthreeinput">
-                        <input class="top" type="text" [(ngModel)]="destinationDetails.from" name="from" formControlName="from"  required="">
-                    </div>
-                    <div class="col-md-6" *ngIf="destinationForm.controls['from'].hasError('required') && destinationForm.controls['from'].touched" [ngClass]="{'error':!destinationForm.controls['from'].valid && destinationForm.controls['from'].touched}">you must include From</div>
-                    <div class="clear"></div>
-                </div>
-                <div class="agileemailinfo agileinfow3ls">
-                    <div class="agileemailinfo-lable wthreelable">
-                        <label>To</label><span class="colon">:</span>
-                    </div>
-                    <div class="agileemailinfo-input wthreeinput">
-                        <input class="top" type="text" [(ngModel)]="destinationDetails.to" name="to" formControlName="to"  required="">
-                    </div>
-                    <div class="col-md-6" *ngIf="destinationForm.controls['to'].hasError('required') && destinationForm.controls['to'].touched" [ngClass]="{'error':!destinationForm.controls['to'].valid && destinationForm.controls['to'].touched}">you must include To</div>
-                    <div class="clear"></div>
-                </div>
-                <div class="agileemailinfo agileinfow3ls">
-                    <div class="agileemailinfo-lable wthreelable">
-                        <label>Km</label><span class="colon">:</span>
-                    </div>
-                    <div class="agileemailinfo-input wthreeinput">
-                        <input class="top" type="text" [(ngModel)]="destinationDetails.km" name="Km" formControlName="km" required="">
-                    </div>
-                    <div class="col-md-6" *ngIf="destinationForm.controls['km'].hasError('required') && destinationForm.controls['km'].touched" [ngClass]="{'error':!destinationForm.controls['km'].valid && destinationForm.controls['km'].touched}">you must include Km</div>
-                    <div class="clear"></div>
-                </div>
-                <div class="aitssubmitw3ls">
-                    <input type="submit" name="submit" (click)="saveForm(destinationModel)" [disabled]="!destinationForm.valid" value="ADD">
-                </div> 
-            </form>
-        </div>
-    </div>
 
-    <div class="containerw3layouts-agileits"  *ngIf="!isAddDestination">
-    <h1>DELETE DESTINATION</h1>
-        <div class="w3layoutscontactagileits">
-            <form [formGroup]="destinationDeleteForm" >
-                <div class="agileemailinfo agileinfow3ls">
-                    <div class="agileemailinfo-lable wthreelable">
-                        <label>Delete Destination</label><span class="colon">:</span>
+    <div class="containerw3layouts-agileits">
+    <div class="aitssubmitw3ls">
+        <input type="submit" name="add" [ngClass]="{'activeTab':isAddDestination}" (click)="isAddDestination=true" value="ADD DESTINATION">
+        <!--<input type="submit" name="add" (click)="isAddDestination=true" [disabled]="!destinationForm.valid" value="ADD">-->
+        <!--</div>
+        <div class="aitssubmitw3ls">-->
+        <input type="submit" name="delete" [ngClass]="{'activeTab':!isAddDestination}" (click)="isAddDestination=false" value="DELETE DESTINATION">
+        <!--<input type="submit" name="delete" (click)="isAddDestination=false" [disabled]="!destinationForm.valid" value="DELETE">-->
+    </div>
+        <div  *ngIf="isAddDestination">
+            <h1>ADD DESTINATION</h1>
+            <div class="w3layoutscontactagileits">
+                <form [formGroup]="destinationForm" >
+                    <div class="agileemailinfo agileinfow3ls">
+                        <div class="agileemailinfo-lable wthreelable">
+                            <label>From</label><span class="colon">:</span>
+                        </div>
+                        <div class="agileemailinfo-input wthreeinput">
+                            <input class="top" type="text" [(ngModel)]="destinationDetails.from" name="from" formControlName="from"  required="">
+                        </div>
+                        <div class="col-md-6" *ngIf="destinationForm.controls['from'].hasError('required') && destinationForm.controls['from'].touched" [ngClass]="{'error':!destinationForm.controls['from'].valid && destinationForm.controls['from'].touched}">you must include From</div>
+                        <div class="clear"></div>
                     </div>
-                    <div class="agileemailinfo-input wthreeinput">
-                        <select name="destination" formControlName = "destination" (change)="selectedDest(destination)" [(ngModel)]="destination">
-                            <option *ngFor="let dest of destination" [value]="dest.area">{{dest.area}}</option>
-                        </select>
-                        <!--                        <input class="top" type="text" [(ngModel)]="bSignupModel.deleteDestination" name="deleteDestination" formControlName="deleteDestination"  required="">-->
+                    <div class="agileemailinfo agileinfow3ls">
+                        <div class="agileemailinfo-lable wthreelable">
+                            <label>To</label><span class="colon">:</span>
+                        </div>
+                        <div class="agileemailinfo-input wthreeinput">
+                            <input class="top" type="text" [(ngModel)]="destinationDetails.to" name="to" formControlName="to"  required="">
+                        </div>
+                        <div class="col-md-6" *ngIf="destinationForm.controls['to'].hasError('required') && destinationForm.controls['to'].touched" [ngClass]="{'error':!destinationForm.controls['to'].valid && destinationForm.controls['to'].touched}">you must include To</div>
+                        <div class="clear"></div>
                     </div>
-                    <div class="col-md-6" *ngIf="destinationDeleteForm.controls['destination'].hasError('required') && destinationDeleteForm.controls['destination'].touched" [ngClass]="{'error':!destinationDeleteForm.controls['destination'].valid && destinationDeleteForm.controls['destination'].touched}">you must include deleteDestination</div>
-                    <div class="clear"></div>
-                </div>
-                <div class="aitssubmitw3ls">
-                    <input type="submit" name="submit" (click)="deleteDestination(destination)" [disabled]="!destinationDeleteForm.valid" value="DELETE">
-                </div> 
-            </form>
+                    <div class="agileemailinfo agileinfow3ls">
+                        <div class="agileemailinfo-lable wthreelable">
+                            <label>Km</label><span class="colon">:</span>
+                        </div>
+                        <div class="agileemailinfo-input wthreeinput">
+                            <input class="top" type="text" [(ngModel)]="destinationDetails.km" name="Km" formControlName="km" required="">
+                        </div>
+                        <div class="col-md-6" *ngIf="destinationForm.controls['km'].hasError('required') && destinationForm.controls['km'].touched" [ngClass]="{'error':!destinationForm.controls['km'].valid && destinationForm.controls['km'].touched}">you must include Km</div>
+                        <div class="clear"></div>
+                    </div>
+                    <div class="aitssubmitw3ls">
+                        <input type="submit" name="submit" (click)="saveForm(destinationModel)" [disabled]="!destinationForm.valid" value="ADD">
+                    </div> 
+                </form>
+            </div>
+        </div>
+
+        <div  *ngIf="!isAddDestination">
+            <h1>DELETE DESTINATION</h1>
+            <div class="w3layoutscontactagileits">
+                <form [formGroup]="destinationDeleteForm" >
+                    <div class="agileemailinfo agileinfow3ls">
+                        <div class="agileemailinfo-lable wthreelable">
+                            <label>Delete Destination</label><span class="colon">:</span>
+                        </div>
+                        <div class="agileemailinfo-input wthreeinput">
+                            <select name="destination" formControlName = "destination" (change)="selectedDest(destination)" [(ngModel)]="destination">
+                                <option *ngFor="let dest of destination" [value]="dest.area">{{dest.area}}</option>
+                            </select>
+                            <!--                        <input class="top" type="text" [(ngModel)]="bSignupModel.deleteDestination" name="deleteDestination" formControlName="deleteDestination"  required="">-->
+                        </div>
+                        <div class="col-md-6" *ngIf="destinationDeleteForm.controls['destination'].hasError('required') && destinationDeleteForm.controls['destination'].touched" [ngClass]="{'error':!destinationDeleteForm.controls['destination'].valid && destinationDeleteForm.controls['destination'].touched}">you must include deleteDestination</div>
+                        <div class="clear"></div>
+                    </div>
+                    <div class="aitssubmitw3ls">
+                        <input type="submit" name="submit" (click)="deleteDestination(destination)" [disabled]="!destinationDeleteForm.valid" value="DELETE">
+                    </div> 
+                </form>
+            </div>
         </div>
     </div>
 </div>
