--- a/src/styles.css
+++ b/src/styles.css
@@ -597,3 +597,23 @@ textarea {
 .routeLink{
     color: white;
 }
+select {
+    border: 1px solid #fff;
+    background-color: rgba(255,255,255,.5);
+    padding: 5px;
+    width: 100%;
+    color: whitesmoke;
+}
+
+select option{
+    background-color: transparent !important;
+    border: 1px solid #e4e4e4;
+    color: #000;
+    -webkit-appearance: none; 
+    -moz-appearance: none; 
+}
+.activeTab{
+    background-color: #FFF !important;
+    color: #000 !important;
+    border-color: #FFF !important;
+}
